a little bit more styling

--- a/public/resources/css/main.css
+++ b/public/resources/css/main.css
@@ -19,4 +19,14 @@ main section {
     border: 2px solid black;
     border-radius: 10px;
     text-align: center;
+    height: 300px;
+}
+
+main section .buttonGroup {
+    border-bottom: 2px solid black;
+    margin-top: 10px auto;
+    width: 60%;
+    padding: auto 0;
+    text-align: center;
+    
 }
