--- a/public/resources/css/main.css
+++ b/public/resources/css/main.css
@@ -2,6 +2,15 @@
     box-sizing: border-box;
 }
 
+h3 {
+    font-size: 25px;
+}
+
+h2 {
+    font-size: 20px;
+    /* border-bottom: 2px solid black; */
+}
+
 header h1 {
     text-align: center;
     background: darkslategray;
